# axum-folder-router

./: CHANGELOG.md  Cargo.toml  README.md
examples/advanced/: server.rs
examples/advanced/api/: fallback.rs  middleware.rs
examples/advanced/api/users/: intercept.rs  middleware.rs
examples/advanced/static/: index.html
examples/openapi/: main.rs
examples/openapi/api/: openapi.toml  route.rs
examples/openapi/api/users/: route.rs
examples/openapi/api/users/[id]/: route.rs
src/: generate.rs  lib.rs  openapi.rs  parse.rs
tests/: expand.rs  fallback.rs  intercept.rs  nest.rs  openapi.rs  openapi_config.rs  runtime.rs  stateful.rs  static_state.rs
tests/expand/: advanced.expanded.rs  simple.expanded.rs
tests/failures/: intercept_no_request.rs  intercept_no_request.stderr  intercept_request_not_last.rs  intercept_request_not_last.stderr  nest_catchall.rs  nest_catchall.stderr  no_files.stderr  no_routes.stderr
tests/failures/intercept_no_request/: intercept.rs
tests/failures/intercept_request_not_last/: intercept.rs
tests/failures/nest_catchall/: route.rs
tests/failures/nest_catchall/[...rest]/: fallback.rs  route.rs
tests/fixtures/fallback/: fallback.rs  route.rs
tests/fixtures/fallback_stateful/: fallback.rs
tests/fixtures/intercept/: intercept.rs  route.rs
tests/fixtures/intercept_extractor/: intercept.rs  route.rs
tests/fixtures/intercept_fallback/: fallback.rs
tests/fixtures/intercept_fallback/guarded/: intercept.rs
tests/fixtures/intercept_stateful/: intercept.rs
tests/fixtures/nest/: fallback.rs
tests/fixtures/nest/admin/: middleware.rs  route.rs
tests/fixtures/nest/admin/secret/: fallback.rs  route.rs
tests/fixtures/nest/shop/: fallback.rs  route.rs
tests/fixtures/nest/shop/items/: route.rs
tests/fixtures/openapi/: route.rs
tests/fixtures/openapi/users/: route.rs
tests/fixtures/openapi/users/[id]/: route.rs
tests/fixtures/openapi_config/: openapi.toml
tests/fixtures/openapi_config/api/: openapi.toml  route.rs
tests/fixtures/openapi_config/api/hello/: openapi.toml  route.rs
tests/fixtures/openapi_config/api/internal/: route.rs
tests/fixtures/openapi_config/api/internal/public/: route.rs
tests/fixtures/openapi_config/api/users/: route.rs
tests/fixtures/openapi_config/auth/: route.rs
tests/fixtures/openapi_config/health/: route.rs
tests/fixtures/stateful/: route.rs
tests/fixtures/stateful/secret/: middleware.rs  route.rs
