[package]
name = "axum-folder-router"
version = "0.4.1"
edition = "2021"
readme = "./README.md"
authors = ["Tristan Druyen <ek36g2vcc@mozmail.com>"]
categories = ["web-programming"]
keywords = ["axum", "controller", "macro", "routing"]
description = "Helper macro for simple folder based routing of axum handlers"
homepage = "https://git.vlt81.de/vault81/axum-folder-router"
repository = "https://git.vlt81.de/vault81/axum-folder-router"
license = "MIT"

[lib]
path = "./src/lib.rs"
proc-macro = true

[features]
# Enables use of unstable [`track_path`](https://doc.rust-lang.org/beta/unstable-book/library-features/track-path.html) feature to [avoid cache issues](#avoiding-cache-issues).
nightly = []
# Adds some debug logging
debug = []
# Emits an `openapi()` constructor (alongside `into_router*`) for any router
# invoked with the `openapi` flag, building a `utoipa::openapi::OpenApi` document
# from the route tree. Requires the *consuming* crate to depend on `utoipa = "5"`.
openapi = ["dep:toml"]
# Used for working around macrotest behaviour, not useful outside of testing
macrotest = ["dep:regex"]
default = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = { version = "1.12", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
trybuild = "1.0"
macrotest = "1.2"
# Exercised by the `openapi`-gated example/tests; the macro itself emits code
# that references the consuming crate's own `utoipa` dependency.
utoipa = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The OpenAPI demo only compiles with the `openapi` feature (and its `utoipa`
# dev-dependency); gate it so a plain `cargo build --examples` stays green.
[[example]]
name = "openapi"
required-features = ["openapi"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_doctest_main = { level = "allow", priority = 0 } # for build.rs doc
unused-async = { level = "allow", priority = 0 }          # for examples without unecessary noise
